// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mastchessnapshot 1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save
</div>
`;

exports[`mastchessnapshot 2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save me
</div>
`;
